| Summary: | ASTERISK-27364: channel: Crash when fax gateway is in use with PJSIP | ||
| Reporter: | Jared Hull (fortytwo) | Labels: | fax patch pjsip |
| Date Opened: | 2017-10-20 11:47:37 | Date Closed: | 2017-11-02 11:10:28 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_fax Resources/res_pjsip_t38 |
| Versions: | 15.0.0 15.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) ASTERISK-27364.diff ( 1) gdb_bt_full.txt ( 2) messages.txt ( 3) t38.pcap | |
| Description: | I am trying to send an inbound fax to an ATA which is requesting T38, Asterisk crashes when it receives the reINVITE. This setup is working on Asterisk 14.6, but 15.0.0 and 15.1.0rc both crash.
Attached is the full messages log, a pcap of both legs of the call, and the core dump generated by asterisk. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-10-20 11:47:37.814-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2017-11-01 11:11:12.701-0500 Can you please apply this patch to Asterisk and see if it resolves the problem and allows faxing to work? It can be applied to a source checkout using: patch -p1 < ASTERISK-27364.diff By: Jared Hull (fortytwo) 2017-11-01 14:38:18.145-0500 The patch works on 15.1.0-rc and the recent 15.1.0 release. By: Friendly Automation (friendly-automation) 2017-11-02 11:10:29.521-0500 Change 6963 merged by Joshua Colp: core: Don't attempt to write to a stream that does not exist. [https://gerrit.asterisk.org/6963|https://gerrit.asterisk.org/6963] By: Friendly Automation (friendly-automation) 2017-11-02 11:14:34.741-0500 Change 6962 merged by Jenkins2: core: Don't attempt to write to a stream that does not exist. [https://gerrit.asterisk.org/6962|https://gerrit.asterisk.org/6962] | ||